<resources>
    <string name="ad_donate_text0">The Pro version now has support for multi-factor authentication. In addition, it supports the much requested Master Password feature that prevents unauthorized use and also encrypts all connection settings including passwords and SSH keys to guard against theft. Enable it from the main Menu. If the Menu button is missing, please long-tap the running apps button for the Menu.</string>
    <string name="ad_donate_text1">Tap here to support the project with a small donation by buying the Pro version.</string>
    <string name="ad_donate_text2">The Pro version allows you to disable this dialog and gives you access to additional features.</string>
    <string name="ad_donate_text3">If you would like to support the project further, follow the following links for links to client apps for: </string>
    <string name="ad_donate_text_rdp">The Pro version of aRDP now supports sound redirection!</string>
    <string name="ad_donate_text_spice">The Pro version of aSPICE now supports USB redirection! Just attach your OTG cable prior to connecting.</string>
    <string name="address_caption">VNC Server</string>
    <string name="address_caption_hint">VNC Server</string>
    <string name="address_caption_hint_tunneled">VNC Server</string>
    <string name="address_caption_ssh">SSH Server</string>
    <string name="address_caption_ssh_hint">SSH Server</string>
    <string name="alt_check">Alt</string>
    <string name="ardp_app_name">aRDP Pro</string>
    <string name="arrow_down">Down Arrow</string>
    <string name="arrow_left">Left Arrow</string>
    <string name="arrow_right">Right Arrow</string>
    <string name="arrow_up">Up Arrow</string>
    <string name="aspice_app_name">aSPICE Pro</string>
    <string name="auto">Auto</string>
    <string name="auto_x_cancel">Cancel</string>
    <string name="auto_x_caption">bVNC can automatically discover existing and create new X sessions on Linux/UNIX systems (similar to NX). You need x11vnc to find, and Xvfb, Xvnc, or Xdummy to create sessions. If you have trouble connecting, try selecting a specific Remote Session Type in the AutoX Advanced Settings.</string>
    <string name="auto_x_confirm">Confirm</string>
    <string name="auto_x_descript_geom">Remote Desktop Size (WxH)</string>
    <string name="auto_x_descript_session">Remote Session Type</string>
    <string name="auto_x_disabled">Disabled</string>
    <string name="auto_x_disabled_selection">AutoX Disabled</string>
    <string name="auto_x_enabled">Enabled</string>
    <string name="auto_x_find">Only Find, Don\'t Create</string>
    <string name="auto_x_find_login">Find X Login (needs sudo)</string>
    <string name="auto_x_geom_custom">Custom</string>
    <string name="auto_x_geom_native">Native</string>
    <string-array name="auto_x_geometry">
        <item>@string/auto_x_geom_native</item>
        <item>@string/auto_x_geom_custom</item>
    </string-array>
    <string-array name="auto_x_session">
        <item>@string/auto_x_session_auto</item>
        <item>@string/auto_x_session_custom</item>
        <item>@string/auto_x_session_kde</item>
        <item>@string/auto_x_session_unity</item>
        <item>@string/auto_x_session_unity_2d</item>
        <item>@string/auto_x_session_xfce</item>
        <item>@string/auto_x_session_gnome</item>
        <item>@string/auto_x_session_gnome_cl</item>
        <item>@string/auto_x_session_trinity</item>
        <item>@string/auto_x_session_mate</item>
    </string-array>
    <string name="auto_x_session_auto">Auto</string>
    <string name="auto_x_session_custom">Custom</string>
    <string name="auto_x_session_gnome">GNOME</string>
    <string name="auto_x_session_gnome_cl">GNOME Classic</string>
    <string name="auto_x_session_kde">KDE</string>
    <string name="auto_x_session_mate">MATE</string>
    <string name="auto_x_session_trinity">Trinity</string>
    <string name="auto_x_session_unity">Unity</string>
    <string name="auto_x_session_unity_2d">Unity2D</string>
    <string name="auto_x_session_xfce">Xfce</string>
    <string name="auto_x_title">Configure AutoX</string>
    <string-array name="auto_x_type">
        
        <item>@string/auto_x_disabled_selection</item>
        <item>@string/auto_x_xvfb</item>
        <item>@string/auto_x_xvnc</item>
        <item>@string/auto_x_xdummy</item>
        <item>@string/auto_x_find</item>
        <item>@string/auto_x_find_login</item>
    </string-array>
    <string name="auto_x_unix_auth">Authenticate using supplied SSH Username/Password automatically (to the black login screen).</string>
    <string name="auto_x_unixpw">Use UNIX credentials instead of the built in security mechanism. User must be able to run /bin/su.</string>
    <string name="auto_x_xdummy">Find or Create with Xdummy</string>
    <string name="auto_x_xvfb">Find or Create with Xvfb</string>
    <string name="auto_x_xvnc">Find or Create with Xvnc</string>
    <string name="button_send_text">Send Text</string>
    <string name="button_send_without_saving">Send Text/Don\'t Save It</string>
    <string name="bvnc_app_name">bVNC Pro</string>
    <string name="center_mouse">Mouse @</string>
    <string name="close">Close</string>
    <string name="color_format_caption">Color Mode</string>
    <string name="color_mode">Color Mode</string>
    <string name="connect_button">Connect</string>
    <string name="connection_caption">Connection</string>
    <string-array name="connection_type">
        <item>@string/connection_type_vnc</item>
        <item>@string/connection_type_vnc_over_ssh</item>
        <item>@string/connection_type_ultravnc</item>
        <item>@string/connection_type_vnc_over_ssl</item>
        <item>@string/connection_type_vnc_over_vencrypt</item>
        <item>@string/connection_type_vnc_over_stunnel</item>
    </string-array>
    <string name="connection_type_caption">Connection Type</string>
    <string name="connection_type_rdp">RDP</string>
    <string name="connection_type_rdp_over_ssh">RDP over SSH</string>
    <string name="connection_type_spice">SPICE</string>
    <string name="connection_type_spice_over_ssh">SPICE over SSH</string>
    <string name="connection_type_ultravnc">UltraVNC</string>
    <string name="connection_type_vnc">Basic VNC</string>
    <string name="connection_type_vnc_over_ssh">Secure VNC over SSH</string>
    <string name="connection_type_vnc_over_ssl">Secure VNC over AnonTLS</string>
    <string name="connection_type_vnc_over_stunnel">Secure VNC over SSL Tunnel</string>
    <string name="connection_type_vnc_over_vencrypt">Secure VNC over VeNCrypt</string>
    <string name="control_check">Ctrl</string>
    <string name="copy_list_button">Copy List</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="default_input_mode">Default Input Mode</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="delete_key">Delete Selected Key</string>
    <string name="delete_key_list">Delete Key List</string>
    <string name="disconnect">Disconnect</string>
    <string name="dpad_as_arrows">Use D-Pad for arrows and D-Pad click for Ctrl.</string>
    <string name="enable_recording">Enable Recording</string>
    <string name="enable_sound">Enable Sound</string>
    <string name="enter_text">Send Text</string>
    <string name="enter_text_title">Enter Text to Send</string>
    <string name="error_anon_dh_unsupported">The VNC Server is trying to use Anonymous Diffie Hellman ciphers which are not supported on your Android device. If using GNOME\'s Vino VNC server, you can disable AnonTLS by running the following command in a terminal and then restarting: \"gsettings set org.gnome.Vino require-encryption false\". If running x11vnc, you can add the following options: \"-vencrypt nodh:only -ssl\".</string>
    <string name="error_connection_failed">Connection failed.</string>
    <string name="error_connection_interrupted">Connection interrupted.</string>
    <string name="error_no_user_hostname">Please enter at least a user and a hostname or IP address.</string>
    <string name="error_out_of_memory">Unable to allocate sufficient memory to draw remote screen. Try restarting the application, then restart your device. You can also try reducing the size of the remote desktop through the app settings.</string>
    <string name="error_ovirt_unable_to_connect">Unable to connect or authenticate, please check server address, user, password, and cert authority and subject.</string>
    <string name="error_pick_correct_item">Please ensure you have picked the right item in Connection Type.</string>
    <string name="error_rdp_authentication_failed">RDP Authentication failed! Please check the RDP username and password and try again.</string>
    <string name="error_rdp_connection_failed">RDP Connection failed! Either network connectivity was interrupted, the RDP server was turned off or disabled, or your session was taken over.</string>
    <string name="error_rdp_unable_to_connect">Could not connect to RDP server! Please ensure RDP Server setting is correct, the server is turned on, RDP is enabled, and that the server is on the same network as this device.</string>
    <string name="error_security_type">Server did not offer supported security type.</string>
    <string name="export_settings">Export</string>
    <string name="export_settings_path"/>
    <string name="import_export_settings">Import/Export Settings</string>
    <string name="import_settings">Import</string>
    <string name="import_settings_file_url"/>
    <string name="keep_password_button">Keep</string>
    <string name="local_mouse_check">Local mouse pointer (select if pointer is invisible)</string>
    <string name="nickname_caption_hint">Title (optional)</string>
    <string name="password_hint_ssh">SSH Password</string>
    <string name="port_hint">Port</string>
    <string name="port_ssh_hint">Port</string>
    <string name="rdp_address_caption_hint">RDP Server</string>
    <string name="rdp_adv_console_mode">Console Mode</string>
    <string name="rdp_adv_desktop_background">Show desktop background</string>
    <string name="rdp_adv_desktop_composition">Enable Desktop Composition</string>
    <string name="rdp_adv_font_smoothing">Perform font smoothing</string>
    <string name="rdp_adv_menu_animation">Show Menu Animations</string>
    <string name="rdp_adv_redirect_sdcard">Redirect SD Card</string>
    <string name="rdp_adv_remotefx">Enable RemoteFX</string>
    <string name="rdp_adv_visual_styles">Enable Visual Styles</string>
    <string name="rdp_adv_window_contents">Show window contents while dragging</string>
    <string name="rdp_descript_geom">Remote Desktop Size (WxH)</string>
    <string name="rdp_domain_hint">RDP Domain</string>
    <string name="rdp_password_hint">RDP Password</string>
    <string name="rdp_username_hint">RDP Username</string>
    <string name="remote_sound_disabled">Sound Disabled</string>
    <string name="remote_sound_on_device">Sound On Device</string>
    <string name="remote_sound_on_server">Sound On Server</string>
    <string name="rotate_dpad">Rotate Bluetooth or software D-Pad</string>
    <string name="ssh_passphrase_hint">SSH Passphrase</string>
    <string name="ssh_pubkey_button">Manage Key</string>
    <string name="ssh_use_pubkey">Use Key</string>
    <string name="username_hint_ssh">SSH Username</string>
    <string name="copy_logcat">Copy Logcat</string>
    <string name="ca_subject">Enter certificate subject name here. May not be needed if the cert common name (CN) matches the server hostname.</string>
    <string name="path_to_ca">Enter a file path (for example /sdcard/ca-cert.pem) and tap Import to load your Certificate Authority.</string>
    <string name="paste_ca">Enter the Certificate Authority here if you are not importing it as a file.</string>
</resources>