<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent">

<LinearLayout
    android:id="@+id/mainLayout"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="0dip"
	android:orientation="vertical">
   	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Spinner
			android:id="@+id/spinnerConnection"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:singleLine="true"/>
		<Button 
			android:id="@+id/buttonGO" 
			android:text="@string/connect_button"
			android:background="#444444"
			android:textColor="#dddddd"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0"
			android:textSize="22sp"
			android:singleLine="true"/>
	</LinearLayout>

	<TableLayout
		android:id="@+id/settings_tablelayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dip">

		<TableRow>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Connection Type"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</TableRow>

		<TableRow>

			<Spinner
				android:id="@+id/connectionType"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:entries="@array/rdp_connection_type"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</TableRow>

		<TableRow>

			<EditText
				android:id="@+id/textNickname"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/nickname_caption_hint"
				android:singleLine="true"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</TableRow>

		<TableRow>

			<TextView
				android:id="@+id/sshCaption"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="SSH Tunnel Settings"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</TableRow>

		<TableRow>

			<LinearLayout
				android:id="@+id/sshServerEntry"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:visibility="gone">

				<EditText
					android:id="@+id/sshServer"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:hint="@string/address_caption_ssh_hint"
					android:inputType="textNoSuggestions|textVisiblePassword"
					android:nextFocusDown="@+id/sshPort"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/sshPort"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0"
					android:hint="@string/port_ssh_hint"
					android:inputType="textNoSuggestions|textVisiblePassword"
					android:nextFocusDown="@+id/sshUser"
					android:singleLine="true"
					android:text="22"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
		</TableRow>

		<TableRow>

			<LinearLayout
				android:id="@+id/sshCredentials"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:visibility="gone">

				<EditText
					android:id="@+id/sshUser"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight=".5"
					android:hint="@string/username_hint_ssh"
					android:inputType="textNoSuggestions|textVisiblePassword"
					android:nextFocusDown="@+id/sshPassword"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/sshPassword"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight=".5"
					android:hint="@string/password_hint_ssh"
					android:inputType="textNoSuggestions"
					android:password="true"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
		</TableRow>

		<TableRow>

			<LinearLayout
				android:id="@+id/layoutUseSshPubkey"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="vertical"
				android:visibility="gone">

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<EditText
						android:id="@+id/sshPassphrase"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_weight=".5"
						android:hint="@string/ssh_passphrase_hint"
						android:inputType="textNoSuggestions"
						android:password="true"
						android:singleLine="true"
						android:textAppearance="?android:attr/textAppearanceMedium" />

					<CheckBox
						android:id="@+id/checkboxUseSshPubkey"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_weight=".5"
						android:checked="false"
						android:singleLine="true"
						android:text="@string/ssh_use_pubkey"
						android:textAppearance="?android:attr/textAppearanceMedium" />
				</LinearLayout>

				<Button
					android:id="@+id/buttonGeneratePubkey"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:enabled="true"
					android:text="@string/ssh_pubkey_button"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
		</TableRow>

		<TableRow>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="RDP Connection Settings"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</TableRow>

		<TableRow>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">

				<EditText
					android:id="@+id/textIP"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:hint="@string/rdp_address_caption_hint"
					android:inputType="textNoSuggestions|textVisiblePassword"
					android:nextFocusDown="@+id/textPORT"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<EditText
					android:id="@+id/textPORT"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0"
					android:hint="@string/port_hint"
					android:inputType="textNoSuggestions|textVisiblePassword"
					android:singleLine="true"
					android:text="3389"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
		</TableRow>

		<TableRow>

			<EditText
				android:id="@+id/textUsername"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/rdp_username_hint"
				android:inputType="textNoSuggestions|textVisiblePassword"
				android:singleLine="true"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</TableRow>

		<TableRow>

			<EditText
				android:id="@+id/rdpDomain"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:hint="@string/rdp_domain_hint"
				android:inputType="textNoSuggestions|textVisiblePassword"
				android:singleLine="true"
				android:textAppearance="?android:attr/textAppearanceMedium" />
		</TableRow>

		<TableRow>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal">

				<EditText
					android:id="@+id/textPASSWORD"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:hint="@string/rdp_password_hint"
					android:inputType="textNoSuggestions"
					android:password="true"
					android:singleLine="true"
					android:textAppearance="?android:attr/textAppearanceMedium" />

				<CheckBox
					android:id="@+id/checkboxKeepPassword"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0"
					android:singleLine="true"
					android:text="@string/keep_password_button"
					android:textAppearance="?android:attr/textAppearanceMedium" />
			</LinearLayout>
		</TableRow>
		<!-- <TableRow>
			<Spinner 
			    android:id="@+id/colorformat" 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"/>
		</TableRow> -->
	</TableLayout>
	
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:orientation="horizontal">
	    <ToggleButton
	        android:id="@+id/toggleAdvancedSettings"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	    	android:textAppearance="?android:attr/textAppearanceSmall"/>
	    <TextView
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Show Advanced Settings"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="5dip"
		android:orientation="horizontal">

		<CheckBox
			android:id="@+id/toggleKioskMode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="enable Kioskmode"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<CheckBox
			android:id="@+id/switch_lock_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="@integer/keycode_numpad_0"
			android:checked="true"
			android:text="Lock Settings" />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAdvancedSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="5dip"
        android:orientation="vertical">
	    
	    <TextView
	  	    android:id="@+id/textDescriptGeom"
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:text="@string/rdp_descript_geom"
	  	    android:textAppearance="?android:attr/textAppearanceMedium"/>
	    
		<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    <Spinner 
		        android:id="@+id/spinnerRdpGeometry" 
		        android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
		        android:layout_weight="0.4"
			    android:entries="@array/rdp_geometry"
	    	    android:textAppearance="?android:attr/textAppearanceMedium"/>
		    <EditText
		        android:id="@+id/rdpWidth"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:singleLine="true"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
	  	    <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="x"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		    <EditText
		        android:id="@+id/rdpHeight"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.3"
		        android:singleLine="true"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		</LinearLayout>
        <RadioGroup
            android:id="@+id/groupRemoteSoundType"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <RadioButton
                android:id="@+id/radioRemoteSoundDisabled"
                android:text="@string/remote_sound_disabled"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="remoteSoundTypeToggled"/>
            <RadioButton
                android:id="@+id/radioRemoteSoundOnServer"
                android:text="@string/remote_sound_on_server"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="remoteSoundTypeToggled"/>
            <RadioButton
                android:id="@+id/radioRemoteSoundOnDevice"
                android:text="@string/remote_sound_on_device"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="remoteSoundTypeToggled"/>
        </RadioGroup>
        <CheckBox
            android:id="@+id/checkboxEnableRecording"
            android:text="@string/enable_recording"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_height="wrap_content"
            android:onClick="toggleEnableRecording"/>
        <CheckBox
            android:id="@+id/checkboxConsoleMode"
            android:text="@string/rdp_adv_console_mode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_height="wrap_content"/>
        <CheckBox
            android:id="@+id/checkboxRedirectSdCard"
            android:text="@string/rdp_adv_redirect_sdcard"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxRemoteFx"
		    android:text="@string/rdp_adv_remotefx"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxDesktopBackground"
		    android:text="@string/rdp_adv_desktop_background"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxFontSmoothing"
		    android:text="@string/rdp_adv_font_smoothing"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxDesktopComposition"
		    android:text="@string/rdp_adv_desktop_composition"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxWindowContents"
		    android:text="@string/rdp_adv_window_contents"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxMenuAnimation"
		    android:text="@string/rdp_adv_menu_animation"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxVisualStyles"
		    android:text="@string/rdp_adv_visual_styles"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
	   <TextView
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:text="Local Device Tweaks"
	  	    android:textAppearance="?android:attr/textAppearanceMedium"/>
		<CheckBox
			android:id="@+id/checkboxUseDpadAsArrows"
		    android:text="@string/dpad_as_arrows"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxRotateDpad"
		    android:text="@string/rotate_dpad"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
		<CheckBox
			android:id="@+id/checkboxUseLocalCursor"
		    android:text="@string/local_mouse_check"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:layout_width="wrap_content"
		    android:gravity="left|center_vertical"
		    android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/versionAndCode"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
	</LinearLayout>
	<Button
		android:id="@+id/buttonImportExport"
		android:text="@string/import_export_settings"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
	<Button
		android:id="@+id/copyLogcat"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/copy_logcat"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	</LinearLayout>
</ScrollView>
