<?xml version="1.0" encoding="utf-8"?>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:padding="5dip"
  android:gravity="center|center_vertical"
  android:id="@+id/dialogImportExport"
  >
  <TableRow>
  	<TextView 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/import_settings_file_url"
		android:gravity="right|center_vertical"
		android:textAppearance="?android:attr/textAppearanceMedium"
  		/>
  	<EditText
  		android:id="@+id/textImportUrl"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
 		android:layout_weight="1"
 		android:textAppearance="?android:attr/textAppearanceMedium"
  		android:singleLine="true"
  		/>
  	<Button
  		android:id="@+id/buttonImport"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/import_settings"
  		android:textAppearance="?android:attr/textAppearanceMedium"
  		/>
  </TableRow>
  <TableRow>
  	<TextView
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/export_settings_path"
		android:gravity="right|center_vertical"
		android:textAppearance="?android:attr/textAppearanceMedium"
  		/>
  	<EditText
  		android:id="@+id/textExportPath"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_weight="1"
  		android:textAppearance="?android:attr/textAppearanceMedium"
  		android:singleLine="true"
  		/>
  	<Button
  		android:id="@+id/buttonExport"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/export_settings"
  		android:textAppearance="?android:attr/textAppearanceMedium"
  		/>
  </TableRow>
</TableLayout>
