<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:orientation="vertical" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ca_subject"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/certSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minLines="2"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
       	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/path_to_ca"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
        	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="horizontal" >

	        <EditText
	            android:id="@+id/caCertPath"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.79"
	            android:ems="10" />

	        <Button
	            android:id="@+id/importButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/import_settings" />
	    </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paste_ca"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/caCert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minLines="10"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>
        
        <Button
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_help" />
    </LinearLayout>
</ScrollView>